RESOLVED FIXED59851
Pages with accelerated compositing do not redraw unless scrolled
https://bugs.webkit.org/show_bug.cgi?id=59851
Summary Pages with accelerated compositing do not redraw unless scrolled
Chris Marrin
Reported 2011-04-29 17:42:51 PDT
* STEPS TO REPRODUCE 1. go to http://demos.legendthemes.com/3d/ 2. Press F11 for Full Screen 3. Press F11 to leave Full screen * RESULTS Page will not repaint correctly unless scrolled. <rdar://problem/9242845>
Attachments
Patch (1.25 KB, patch)
2011-04-29 17:52 PDT, Chris Marrin
simon.fraser: review-
Patch (1.98 KB, patch)
2011-05-02 12:27 PDT, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2011-04-29 17:52:22 PDT
Simon Fraser (smfr)
Comment 2 2011-04-29 17:59:18 PDT
Comment on attachment 91777 [details] Patch Why does Windows need this change but not Mac?
Chris Marrin
Comment 3 2011-04-29 19:43:38 PDT
(In reply to comment #2) > (From update of attachment 91777 [details]) > Why does Windows need this change but not Mac? I thought about that. I haven't tried debugging this sequence of calls on Mac. But I'm assuming that there is some Mac specific code that does a setNeedsDIsplay() later in time. Or it could be that CA automatically dirties the layer when changing size and CACF doesn't. I don't think doing a setNeedsDisplay here will hurt Mac. But I could always rejigger the code a bit so this is only done on Windows.
Simon Fraser (smfr)
Comment 4 2011-04-29 19:55:33 PDT
Comment on attachment 91777 [details] Patch I actually think we need it (see Radar comments).
Simon Fraser (smfr)
Comment 5 2011-05-01 22:57:15 PDT
Comment on attachment 91777 [details] Patch Actually, I think you should only repaint if it got larger, and then only the rects that were revealed.
Chris Marrin
Comment 6 2011-05-02 12:27:14 PDT
Chris Marrin
Comment 7 2011-05-02 12:56:25 PDT
Note You need to log in before you can comment on or make changes to this bug.