2011-04-29  Chris Marrin  <cmarrin@apple.com>

Reviewed by Simon Fraser.

        Pages with accelerated compositing do not redraw unless scrolled
        https://bugs.webkit.org/show_bug.cgi?id=59851

        Added a setNeedDisplay on the non-composited content layer after
        the size is changed so it paints the full size of the layer. Called
        only for the areas newly exposed, if any.

        * WebProcess/WebPage/ca/LayerTreeHostCA.cpp:
        (WebKit::LayerTreeHostCA::sizeDidChange):



Canonical link: https://commits.webkit.org/75211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85508 268f45cc-cd09-0410-ab3c-d52691b4dbfc