Source/WebKit2/WebProcess/WebPage/ca/LayerTreeHostCA.cpp
@@ -128,7 +128,19 @@ void LayerTreeHostCA::scrollNonCompositedContents(const IntRect& scrollRect, con
 void LayerTreeHostCA::sizeDidChange(const IntSize& newSize)
 {
     m_rootLayer->setSize(newSize);
+
+    // If the newSize exposes new areas of the non-composited content a setNeedsDisplay is needed
+    // for those newly exposed areas.
+    FloatSize oldSize = m_nonCompositedContentLayer->size();
     m_nonCompositedContentLayer->setSize(newSize);
+
+    if (newSize.width() > oldSize.width()) {
+        float height = std::min(static_cast<float>(newSize.height()), oldSize.height());
+        m_nonCompositedContentLayer->setNeedsDisplayInRect(FloatRect(oldSize.width(), 0, newSize.width() - oldSize.width(), height));
+    }
+
+    if (newSize.height() > oldSize.height())
+        m_nonCompositedContentLayer->setNeedsDisplayInRect(FloatRect(0, oldSize.height(), newSize.width(), newSize.height() - oldSize.height()));
 
     if (m_pageOverlayLayer)
         m_pageOverlayLayer->setSize(newSize);
